apps/subsystems/home-automation/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
  - name: home-assistant
    port: 8123
    targetPort: home-assistant
    protocol: TCP
  - name: code-server
    port: 8080
    targetPort: code-server
    protocol: TCP
  type: ClusterIP
